--- a/run/caete.cfg
+++ b/run/caete.cfg
@@ -9,4 +9,21 @@ variable = "annual_cycle_mean_of_et"
 [GLEAM]
 source   = "DATA/et/GLEAM/et_GLEAM_1981_2010.nc"
 
+[h2: Surface Runoff ]
+#bgcolor = "#ECFFE6"
+
+variable = "annual_cycle_mean_of_mrro"
+
+[ESRL-CPC]
+source = "/DATA/mrro/ESRL-CPC/runof_cpc.nc"
+
+[h2: Soil Moisture]
+#bgcolor = "#ECFFE6"
+
+variable = "annual_cycle_mean_of_mrso"
+
+[ESRL-CPC]
+source = "/DATA/mrso/ESRL-CPC/wsoil_cpc.nc"
+
+
 
