--- a/run/caete.cfg
+++ b/run/caete.cfg
@@ -14,8 +14,12 @@ source   = "DATA/et/GLEAM/et_GLEAM_1981_2010.nc"
 
 variable = "annual_cycle_mean_of_mrro"
 
-[ESRL-CPC]
-source = "/DATA/mrro/ESRL-CPC/runof_cpc.nc"
+#[ESRL-CPC]
+#source = "/DATA/mrro/ESRL-CPC/runof_cpc.nc"
+
+[UNH-GRDC]
+
+source = "/DATA/mrro/UNH-GRDC/runoff_GRDC_obs.nc"
 
 [h2: Soil Moisture]
 #bgcolor = "#ECFFE6"
