fail GLDAS-NOAH

--- a/run/caete.cfg
+++ b/run/caete.cfg
@@ -29,5 +29,8 @@ variable = "annual_cycle_mean_of_mrso"
 [ESRL-CPC]
 source = "/DATA/mrso/ESRL-CPC/wsoil_cpc.nc"
 
+#[GLDAS-NOAH]
+#source = "/DATA/mrso/GLDAS-NOAH/wsoil_GLDAS_NOAH_AC.nc"
+
 
 
